Fix sizing of dgrid to not overflow off the bottom of the page
Fixes #55

--- a/src/app/resources/Grid.styl
+++ b/src/app/resources/Grid.styl
@@ -1,5 +1,17 @@
 @require 'vars.styl'
 .grid
+    height 100%
+    [role='tabpanel']
+        height 100%
+        .tab-content
+            top 47px
+            bottom 0
+            left 0
+            right 0
+            position absolute
+            .tab-pane, .dgrid
+                height 100%
+                width 100%
     button.btn-link
         padding: 10px 15px
     .nav-tabs
